--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "test": "./node_modules/.bin/mocha"
   },
   "bin": {
-    "prerender": "server.js"
+    "prerender": "app.js"
   },
   "engines": {
     "node": ">=0.12.9"
